update storekeeper reject
